Page where users can select from menu partly done

--- a/UI/index.html
+++ b/UI/index.html
@@ -5,11 +5,114 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-compatible" content="IE=edge">
     <title>Book-A-Meal</title>
-
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./fonts/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
 
+<div class="wrapper-fluid">
+    <div class="new-line">
+        <div class="content-30">
+            <div class="card">
+                <img class="card-img"alt="noodles" src="./img/menu/burger.jpeg"/>
+                <div class="container">
+                    <h4>Main Course</h4>
+                    <p>In this food course, meal options are:</p>
+                    <ul>
+                        <li>Rice</li>
+                        <li>Stew</li>
+                    </ul>
+                    <p class="float-left"><b>$14.00</b></p>
+                    <a class="button button-orange float-right">Order</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-30">
+            <div class="card">
+                <img class="card-img" alt="noodles" src="./img/menu/noodles.jpg"/>
+                <div class="container">
+                    <h4>Appetizers</h4>
+                    <p>In this food course, meal options are:</p>
+                    <ul>
+                        <li>Rice</li>
+                        <li>Stew</li>
+                    </ul>
+                    <p class="float-left"><b>$10.50</b></p>
+                    <a class="button button-orange float-right">Order</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-30">
+            <div class="card">
+                <img class="card-img" alt="noodles" src="./img/menu/cake.jpg"/>
+                <div class="container">
+                    <h4>Dessert</h4>
+                    <p>In this food course, meal options are:</p>
+                    <ul>
+                        <li>Rice</li>
+                        <li>Stew</li>
+                    </ul>
+                    <p class="float-left"><b>$2.99</b></p>
+                    <a class="button button-orange float-right">Order</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="new-line">
+        <div class="content-30">
+            <div class="card">
+                <img class="card-img" alt="noodles" src="./img/menu/cake.jpg"/>
+                <div class="container">
+                    <h4>Dessert</h4>
+                    <p>In this food course, meal options are:</p>
+                    <ul>
+                        <li>Rice</li>
+                        <li>Stew</li>
+                    </ul>
+                    <p class="float-left"><b>$2.99</b></p>
+                    <a class="button button-orange float-right">Order</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-30">
+            <div class="card">
+                <img class="card-img" alt="noodles" src="./img/menu/cake.jpg"/>
+                <div class="container">
+                    <h4>Dessert</h4>
+                    <p>In this food course, meal options are:</p>
+                    <ul>
+                        <li>Rice</li>
+                        <li>Stew</li>
+                    </ul>
+                    <p class="float-left"><b>$2.99</b></p>
+                    <a class="button button-orange float-right">Order</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-30">
+            <div class="card">
+                <img class="card-img" alt="noodles" src="./img/menu/cake.jpg"/>
+                <div class="container">
+                    <h4>Dessert</h4>
+                    <p>In this food course, meal options are:</p>
+                    <ul>
+                        <li>Rice</li>
+                        <li>Stew</li>
+                    </ul>
+                    <p class="float-left"><b>$2.99</b></p>
+                    <a class="button button-orange float-right">Order</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 
+<script type="text/javascript" src="./js/custom.js"></script>
 </html>
