--- a/UI/user/login.html
+++ b/UI/user/login.html
@@ -32,7 +32,7 @@
                 <a class="forgot-password">Forgot Password?</a>
                 
                 <div class="content-divider text-muted form-group"><span>OR</span></div>
-                <a class="button button-large button-black">Create an account <i class="fa fa-arrow-right shift-left"></i></a>
+                <a href ="register.html" class="button button-large button-black">Create an account <i class="fa fa-arrow-right shift-left"></i></a>
             </form>
             <p class="small bottom text-center">Copyright &copy; 2019 Book-A-Meal. All rights reserved.</p>
         </div>
