--- a/UI/user/register.html
+++ b/UI/user/register.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-compatible" content="IE=edge">
     <meta name="description" content="A web app where customers can book meals">
-    <title>Book-A-Meal | Login</title>
+    <title>Book-A-Meal | Register</title>
     <link rel="stylesheet" href="./../css/style.css">
     <link rel="stylesheet" href="./../fonts/font-awesome/css/font-awesome.min.css">
 </head>
