--- a/UI/user/register.html
+++ b/UI/user/register.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-compatible" content="IE=edge">
     <meta name="description" content="A web app where customers can book meals">
     <title>Book-A-Meal | Register</title>
+    <link rel="shortcut icon" href="./../img/favicon.ico">
     <link rel="stylesheet" href="./../css/style.css">
     <link rel="stylesheet" href="./../fonts/font-awesome/css/font-awesome.min.css">
 </head>
